--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -57,6 +57,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Areas\Administrador\Pages\Prueba.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.4" />
